# ride-sharing-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Implementatation.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: rev0.py  rev1.py  rev2.py
scripts/: create_migrations.py  init.sh
src/: __init__.py  app.py
src/auth/: auth_controller.py  auth_repo.py  auth_routes.py  auth_schema.py  auth_service.py
src/drivers/: driver_controller.py  driver_repo.py  driver_routes.py  driver_schema.py  driver_service.py
src/modules/auth/: auth_controller.py  auth_repo.py  auth_routes.py  auth_schema.py  auth_service.py
src/modules/drivers/: driver_controller.py  driver_location_model.py  driver_model.py  driver_repo.py  driver_routes.py  driver_schema.py  driver_service.py
src/modules/rides/: ride_controller.py  ride_model.py  ride_repo.py  ride_routes.py  ride_schema.py  ride_service.py
src/modules/users/: user_model.py  user_repo.py  user_schema.py
src/modules/ws/: ws_events.py  ws_manager.py  ws_schema.py
src/shared/: constants.py
src/shared/api/: auth_middleware.py  register.py  rest.py  ws_routes.py
src/shared/db/: base.py  db_manager.py  redis_manager.py
src/shared/integrations/: google_maps.py
src/shared/schema/: base_schema.py
src/shared/utils/: auth_utils.py  config.py  enums.py  exceptions.py  redis_cache.py  ride_utils.py  seed.py  state_machine.py
tests/: conftest.py
tests/funcitonal/: test_auth.py
tests/utils/: data_utils.py
