[project]
name = "ride-sharing-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Varunreddy",email = "varunsannapureddy@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.48.0,<0.49.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "pwdlib (>=0.3.0,<0.4.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "pendulum (>=3.2.0,<4.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "geoalchemy2 (>=0.20.0,<0.21.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "geojson-pydantic (>=2.1.1,<3.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "websockets (>=16.0,<17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM"
]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "docker (>=7.1.0,<8.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "faker (>=40.21.0,<41.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]
